Fix: add branch trigger for dashboard CI

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "composite": true,
     "declarationMap": true,
     "emitDeclarationOnly": true,
@@ -16,6 +17,10 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["development"]
+    "customConditions": ["development"],
+    "paths": {
+      "app1/Module": ["packages/app1/src/remote-entry.ts"],
+      "app2/Module": ["packages/app2/src/remote-entry.ts"]
+    }
   }
 }
