--- a/.github/workflows/app1.yml
+++ b/.github/workflows/app1.yml
@@ -15,4 +15,5 @@ jobs:
         with:
           node-version: 18
       - run: npm install
+      - run: npm install -g nx     # 👈 Add this line
       - run: npx nx build app1
